--- a/kalkulatorm1/kalkulatorm1.vcxproj
+++ b/kalkulatorm1/kalkulatorm1.vcxproj
@@ -161,6 +161,9 @@
       <DependentUpon>MyForm.h</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\.gitignore" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
